# email-gpt

./: .gitignore  README.md  main.py  pyproject.toml
